# claude-code-token-visualizer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/cctv/: __init__.py  cli.py  config.py  paths.py  pricing.py
src/cctv/aggregate/: __init__.py  bucketer.py  totals.py
src/cctv/domain/: events.py  models.py  state.py
src/cctv/ingest/: dedupe.py  locator.py  parser.py  tailer.py
src/cctv/monitor/: __init__.py  scheduler.py  watcher.py
src/cctv/tui/: __init__.py  app.py  render.py  widgets.py
src/cctv/util/: math.py  time.py
tests/: test_bucketer.py  test_config.py  test_parser.py  test_state_time_scale.py  test_totals.py
