[project]
name = "claude-code-token-visualizer"
version = "0.1.0"
description = "Real-time token usage visualizer for Claude Code sessions (TUI)"
authors = [
    { name = "dabitk", email = "dabitk@naver.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["claude", "anthropic", "token", "tui", "terminal", "visualizer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50.0",
    "watchdog>=3.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/dabitk/claude-code-token-visualizer"
Repository = "https://github.com/dabitk/claude-code-token-visualizer"
Issues = "https://github.com/dabitk/claude-code-token-visualizer/issues"

[project.scripts]
cctv = "cctv.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
